[package]
name = "nannou-testground"
version = "0.1.0"
authors = ["pisslake"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "wave"
path = "src/wave.rs"

[[example]]
name = "triangle"
path = "src/triangle.rs"

[[example]]
name = "polyline"
path = "src/polyline.rs"

[dependencies]
nannou = "0.16"