[package]
name = "nannou-testground"
version = "0.1.0"
authors = ["pisslake"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "wave"
path = "src/wave.rs"

[[example]]
name = "triangle"
path = "src/triangle.rs"

[[example]]
name = "polyline"
path = "src/polyline.rs"

[[example]]
name = "sine"
path = "src/sine.rs"

[[example]]
name = "triangle2"
path = "src/triangle2.rs"

[[example]]
name = "flowfield"
path = "src/flowfield.rs"

[[example]]
name = "flowfield2"
path = "src/flowfield2.rs"

[[example]]
name = "noisefield"
path = "src/noisefield.rs"

[dependencies]
nannou = "0.16"